@@ -78,7 +78,7 @@ This is the Objective-C Util SDK which provides bridging code for Objective-C to
 === Requirements
 
 * link:https://adoptopenjdk.net/[Java 11]
-* link:https://kotlinlang.org/[Kotlin 1.4.32]
+* link:https://kotlinlang.org/[Kotlin 1.5.21]
 * Android 6.0 (API 23) to Android 11.0 (API 30)
 
 == Installation
