@@ -23,6 +23,8 @@ kotlin.mpp.stability.nowarn=true
 kotlin.parallel.tasks.in.project=true
 kotlin.code.style=official
 # Native
+kotlin.mpp.enableCompatibilityMetadataVariant=true
+kotlin.mpp.enableGranularSourceSetsMetadata=true
 kotlin.native.enableDependencyPropagation=false
 kotlin.native.cacheKind=none
 kotlin.native.osVersionMin.ios_x64=13.0
