@@ -36,11 +36,16 @@ See link:{link-repository}/compare/v0.1.0...main[changeset]
 
 === Removed
 
+* Stately Common (Dependency)
+
 === Fixed
 
 === Security
 
 === Bumped
+
+* *_BREAKING_* Kotlin 1.4.32 -> 1.5.21
+* *_BREAKING_* Android Gradle Plugin 4.2.2 -> 7.0.2
 
 === Migration
 
